tests/miniJava/pos/000658_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { if ( false ) System.out.println ( { } ) ; else java [ 0 ] = 0 ; } }
