tests/miniJava/neg/002147_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = 0 . length public int [] java ( ) { return 0 ; } ; } }
